- Added RunnerThreads and renamed project

--- a/[Study@Work] Concurrency/.project
+++ b/[Study@Work] Concurrency/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>[Study@Work] Concurrency</name>
+	<name>[Study] Concurrency</name>
 	<comment></comment>
 	<projects>
 	</projects>
